index.css
/*
* @Author: sean
* @Date:   2017-04-26 19:08:44
* @Last Modified by:   sean-dooher
* @Last Modified time: 2017-07-15 15:27:06
*/

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
	border: 0px;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

a {
	text-decoration: none;
	color: inherit;
}

* {
    font-family: 'Open Sans', sans-serif;
    box-sizing: border-box;
}

img {
	display: inline-block;
	width: 30%;
	height: 15%;
}

nav {
	position: fixed;
	top: 0;
	left: 0;
	z-index: 1;
	background-color: #111;
	border: 0px;
	padding:0px;
	width:100%;
	height: 3rem;
    top: 0;
    justify-content: center;
	font-family: 'Open Sans', sans-serif;
}

nav a, nav ul a {
	outline: 0;
}

.navbar-item {
	-webkit-transition-duration: 0.4s; /* Safari */
    transition-duration: 0.4s;
	cursor: pointer;
	color: white;
	display: inline-block;
	padding: 15px 0em;
	width: 10em;
	height: 3em;
	margin: 0px;
	border: 0px;
	opacity: 1;
	font-size: 16px;
}

nav ul {
	overflow: auto;
	text-align: center;
	padding: 0px;
	margin: 0px;
}

.menu-icon {
	display: none;
}

.close-button {
	display: none;
}

.active, nav li:hover {
	color: black;
	background-color: darkgray;
}

.active {
	text-decoration: underline;
}

.content-header{
	font-size: 20px;
	font-family: 'Open Sans', sans-serif;
	margin: 0 auto 20px auto;
	text-align: center;
	color: #444;
	padding: 5px;
	border-bottom: 2px solid #bbb;
	width: 120px;
}

.content-box {
	border: 0px;
	border-bottom: 1px solid #ccc;
	padding: 10px;
	padding-top: 60px;
	margin: 10px auto;
	margin-top: -50px;
	width:40%;
	min-width: 320px;
	border-width: 100%;
}

.content {
	font-family: 'Open Sans', sans-serif;
}

#main-content {
	overflow: hidden;
	width: 100%;
    margin: 0 auto;
	background-color: white;
	border: 1px solid #818181;
}

.banner {
	background-image: url('img/banner_front.jpg');
	position: relative;
	display: inline-block;
	width: 100%;
	height: 450px;
	background-size: cover;
	background-position: center;
}

#profile-box {
	padding-top: 50px;
	margin: auto;
	width: 100%;
	min-width: 320px;
	vertical-align: middle;
	z-index: 1;
	text-align: center;
	text-transform: uppercase;
	overflow: hidden;
}

#profile-text {
	margin-left: auto;
	margin-right: auto;
	width: 50%;
	height: 300px;
	display: inline;
	text-align: center;
	vertical-align: middle;
	white-space: nowrap
	color: #333;
}

#profile-picture {
	margin-left: auto;
	margin-right: auto;
	background-image: url('img/profile.jpg');
	background-size: cover;
	width: 300px;
	height: 300px;
	border-radius: 100%;
	border: 2px solid black;
	display: inline-block;	
}

section {
	display: block;
}

h1 {
	font-family: 'Open Sans', sans-serif;
	font-size: 50px;
	color: #fff;
}

h3 {
	font-family: 'Open Sans', sans-serif;
	font-size: 30px;
	color: #fff;
}

h5 {
	font-family: 'Open Sans', sans-serif;
	font-size: 20px;
	color: #fff;
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}

@media screen and (min-width: 700px) {
	nav {
		opacity: .75;
	}
}

@media screen and (min-width: 320px) and (max-width: 700px) {
	.navbar-item {
		display: none;
		text-transform: center;
		width: 100%;
		margin: 15nav.sidebar ul a .navbar-item {
		display: block;
	}px auto;
		font-size: 30px;
	}

	html.hidden {
		overflow: hidden;
	}
	nav ul {
		overflow: hidden;
		height: 0;
		transition-duration: 0.5s;
	}

	.menu-icon {
		font-size: 1.5rem;
		position: fixed;
		top: 0px;
		right: 0px;
		z-index: 2;
		display: inline-block;
		text-align: center;
		padding: .5rem 0;
		height: 3rem;
		width: 64px;
		color: #818181;
	}

	.menu-icon:hover {
		color: #111;
		background-color: darkgray;
	}

	nav.sidebar ul {
		width: 100%;
		padding: 100px 0 0 0;
		height: 100%;
	}

	nav.sidebar {
		width: 100%;
		height: 100vh;
		background-color: #111;
		overflow-y: scroll;
    	-webkit-overflow-scrolling:touch;
	}

	nav {
		-webkit-transition-duration: 0.5s; /* Safari */
   		transition-duration: 0.5s;
	}

	nav.sidebar .menu-icon {
		display: none;
	}

	nav.sidebar .navbar-item {
		display: block;
	}

	nav.sidebar a {
		width: 100%;
		height: 20%;
	}

	nav.sidebar a.close-button {
		font-size: 3.5rem;
		position: fixed;
		top: 0px;
		right: 0px;
		z-index: 2;
		display: inline-block;
		text-align: right;
		padding: .5rem 0;
		padding-right: 1.5rem;
		height: 3rem;
		width: 128px;
		color: white;
	}

	nav.sidebar a.close-button:hover {
		color: #818181;
	}

	.active, nav li:hover {
		color: #818181;
		background-color: inherit;
	}

	.active {
		text-decoration: none;
	}


}

